// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`no-fs - errored state for reportNeedlessDisables 1`] = `
{
  "cwd": "",
  "errored": true,
  "report": [
    {
      "autofixed": false,
      "deprecations": [],
      "errored": true,
      "invalidOptionWarnings": [],
      "parseErrors": [],
      "source": "/path/to/dummy.css",
      "warnings": [
        {
          "column": 1,
          "endColumn": 38,
          "endLine": 1,
          "line": 1,
          "rule": "--report-needless-disables",
          "severity": "error",
          "text": "Needless disable for "block-no-empty"",
        },
      ],
    },
  ],
  "reportedDisables": [],
  "results": [
    {
      "autofixed": false,
      "deprecations": [],
      "errored": true,
      "ignored": undefined,
      "invalidOptionWarnings": [],
      "parseErrors": [],
      "source": "/path/to/dummy.css",
      "warnings": [
        {
          "column": 1,
          "endColumn": 38,
          "endLine": 1,
          "fix": undefined,
          "line": 1,
          "rule": "--report-needless-disables",
          "severity": "error",
          "text": "Needless disable for "block-no-empty"",
          "url": undefined,
        },
      ],
    },
  ],
  "ruleMetadata": {
    "block-no-empty": {
      "url": "https://stylelint.io/user-guide/rules/block-no-empty",
    },
  },
}
`;

exports[`no-fs - no errored state 1`] = `
{
  "cwd": "",
  "errored": false,
  "report": [
    {
      "autofixed": false,
      "deprecations": [],
      "errored": false,
      "invalidOptionWarnings": [],
      "parseErrors": [],
      "source": "/path/to/dummy.css",
      "warnings": [],
    },
  ],
  "reportedDisables": [],
  "results": [
    {
      "autofixed": false,
      "deprecations": [],
      "errored": false,
      "ignored": undefined,
      "invalidOptionWarnings": [],
      "parseErrors": [],
      "source": "/path/to/dummy.css",
      "warnings": [],
    },
  ],
  "ruleMetadata": {
    "block-no-empty": {
      "url": "https://stylelint.io/user-guide/rules/block-no-empty",
    },
  },
}
`;
